--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,8 +1,14 @@
 /* Space out content a bit */
 body {
+  background: url('../images/fist.jpg') no-repeat;
+  background-size: 100%;
+  background-color: black;
+  background-size: 50%;
+  background-position: top;
   padding-top: 20px;
   padding-bottom: 20px;
 }
+
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
